force-app/main/default/objects/Annual_Inspection__c.object
<CustomObject>
    <description>Custom object to track annual inspections related to Property Management Fee Lands SOP AND Easement/Deed Restriction Monitoring Reports.</description>
    <fields>
        <fullName>Acres_Formula__c</fullName>
        <description>Copy of acres from property interest then saved to acres_final to be memorialized in the monitoring report when report is approved.</description>
        <formula>IF(Property_Interest__c &lt;&gt;&quot;&quot;, Property_Interest__r.Tract_Acres__c,
IF(Property_Interest_Eco_monitoring__c &lt;&gt; &quot;&quot;, Property_Interest_Eco_monitoring__r.Tract_Acres__c,
IF(Property_Management__c &lt;&gt; &quot;&quot;, Property_Management__r.Total_Fee_Acres__c,0)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The number of acres that the interest covers is not editable on the monitoring report.  If for any reason this needs to change, it must be changed on the interest record.</inlineHelpText>
        <label>Acres</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Acres__c</fullName>
        <description>Created for easements 5/4/17</description>
        <inlineHelpText>Enter number of acres covered by this easement. Will autopopulate from interest record.</inlineHelpText>
        <label>Acres</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activities_on_Adjacent_Lands__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Note any activities on adjacent properties if relevant.</inlineHelpText>
        <label>Activities on Adjacent Lands</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Inspection_Dates__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>If this report reflects additional days or earlier visits this year, enter those dates here.</inlineHelpText>
        <label>Additional Inspection Dates</label>
        <length>2550</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_Additional_Observations__c</fullName>
        <inlineHelpText>Use this space for any additional observations you wish to capture in this report.</inlineHelpText>
        <label>Any Additional Observations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_catastrophic_events__c</fullName>
        <inlineHelpText>Indicate if there has been any natural catastrophic events (flood, fire, windstrom, etc.) since the last inspection.</inlineHelpText>
        <label>Any catastrophic events?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <inlineHelpText>Updated automatically by approval process.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <color>#CC0000</color>
                    <label>Not Started</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                    <color>#FF9900</color>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                    <color>#FFFF66</color>
                    <label>Submitted</label>
                </value>
                <value>
                    <fullName>Returned for Revision</fullName>
                    <color>#0B6FCE</color>
                    <label>Returned for Revision</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                    <color>#009900</color>
                    <label>Approved</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inspection reports shall be signed by the party responsible for the Management Unit. Please contact the Assoc. Dir. of Conservation Investments or the Stewardship leads for further assistance.</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Compliance_Monitoring2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Area_s_inspected__c</fullName>
        <inlineHelpText>Describe the area(s) that were inspected on the property. If appropriate, indicate on map.</inlineHelpText>
        <label>Area(s) inspected</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Author__c</fullName>
        <description>Person creating Inspection or Monitoring report if other than assigned monitor.</description>
        <inlineHelpText>If other than assigned monitor, enter in &quot;Last Name, First Name&quot; format</inlineHelpText>
        <label>Author</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CLS_Tracts__c</fullName>
        <description>Auto-populated via workflow based on tracts currently a part of the property management unit record associated with this annual inspection. Read-only on layouts so that users aren&apos;t confused about where to update that info.</description>
        <inlineHelpText>Please update the property management record&apos;s tracts before creating the annual inspection if the tracts have changed since the last inspection.</inlineHelpText>
        <label>CLS Tracts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Change_Notes__c</fullName>
        <inlineHelpText>If you answered &quot;yes&quot; that there were significant changes note them briefly here for reference. Be sure to discuss them above in &quot;Monitor&apos;s Observations.&quot;</inlineHelpText>
        <label>What changed?</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clod_Size__c</fullName>
        <inlineHelpText>Consider the percentage of field with clods larger than four inches in diameter.  For at least 75% of visible area, are clod sizes less than or equal to four inches in diameter?</inlineHelpText>
        <label>XDeprecate_Clod Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <formula>Contract_Number__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDeprecate_Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Number__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>XDeprecate_Contract Number</label>
        <referenceTo>Contract</referenceTo>
        <relationshipName>Compliance_Monitoring</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Costs_reported_to_100000_activity_code__c</fullName>
        <description>Created for easements</description>
        <inlineHelpText>If the easement or deed restriction is IRS reportable, you must record time spent on monitoring, enforcement and any related expenses using Easement Monitoring activity code 100000. Employees report via Deltek &amp; Concur. Contractors thru contract manager.</inlineHelpText>
        <label>Costs reported to 100000 activity code?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes - Required if IRS reportable</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>For easements 5/4/17</description>
        <inlineHelpText>Read only on the monitoring report. If for any reason the county field is incorrect or incomplete, please contact the TNC manager responsible or system administrator.</inlineHelpText>
        <label>County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_PDF_Monitoring_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box to create a PDF version of this monitoring report.</inlineHelpText>
        <label>Create PDF Monitoring Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Created_or_Inspected_Date__c</fullName>
        <formula>IF(ISBLANK(Inspection_Date__c),DATEVALUE(CreatedDate),Inspection_Date__c)</formula>
        <inlineHelpText>Helps sorting the related list. Shows the inspection date, or if that has not yet been filled in, it shows the date the record was created.</inlineHelpText>
        <label>Created or Inspected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Field_Verification__c</fullName>
        <label>XDeprecate_Date of Field Verification</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Describe_Ecological_Threats_or_Concerns__c</fullName>
        <inlineHelpText>Describe Ecological Threats or Concerns and/or explain &quot;other&quot;</inlineHelpText>
        <label>Describe Ecological Threats or Concerns</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_Management_Activities__c</fullName>
        <inlineHelpText>Describe management activities selected and/or explain &quot;other.&quot;</inlineHelpText>
        <label>Describe Selected Management Activities</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_catastrophic_event__c</fullName>
        <inlineHelpText>Describe the impact of the catastrophic event on the property.</inlineHelpText>
        <label>If yes, describe the catastrophic event</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Describe_management_problems__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Describe management problems.Clearly indicate location in text, with photo data or on a separate map. Include any problems which bear on the easement’s or deed restriction’s conservation purposes, even if not subject to its terms or under owner control.</inlineHelpText>
        <label>Describe selected management problems</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Did_owner_rep_go_on_visit__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Please select yes or no to indicate whether the owner accompanied you on any part of the monitoring visit.</inlineHelpText>
        <label>Did owner/rep go on visit?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>For display in view, dashboards and reports</description>
        <formula>IF( Contains( RecordType.DeveloperName ,&quot;Fee&quot;), 
 Property_Management__r.Inspection_Due_Date__c ,
Property_Interest__r.Monitoring_Due_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulled from the Property Management or the Property Interest record where the due date is set originally.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ecological_Threats_or_Concerns__c</fullName>
        <inlineHelpText>Select any observed ecological threat(s) or concern(s).</inlineHelpText>
        <label>Ecological Threats or Concerns</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None Observed</fullName>
                </value>
                <value>
                    <fullName>Erosion</fullName>
                </value>
                <value>
                    <fullName>Invasive, feral or exotic animals</fullName>
                </value>
                <value>
                    <fullName>Invasive or exotic plants</fullName>
                </value>
                <value>
                    <fullName>Disease, parasites, or pathogens</fullName>
                </value>
                <value>
                    <fullName>Deferred infrastructure maintenance</fullName>
                </value>
                <value>
                    <fullName>Deferred ecological management</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>See Fee Land Inspection Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Explanation_of_Non_Compliance__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>If you indicated that this interest is &quot;In Review&quot; or &quot;In Violation,&quot; please explain in detail.</inlineHelpText>
        <label>Explanation of Non-Compliance</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_Inspection_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>External ID field for integrating with Collector (uses this field as the parent id for creating the photo records).</inlineHelpText>
        <label>External Inspection ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_ID__c</fullName>
        <inlineHelpText>The Farm ID is the last three digits of the contract name and is required when conducting an informal or formal field verification.</inlineHelpText>
        <label>XDeprecate_Farm ID</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Land_Inspection__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>In 2016 the SOP for Fee Inspections changed drastically, and so we moved to this new Annual Inspections object. In order to preserve the inspections done prior to 2016, we migrated the information that mapped to the new fields, but use this link to see the full report. We also attached PDFs of the original records to this new object, just in case the old object somehow gets deleted.</description>
        <inlineHelpText>Link to original (full) Fee Land Inspection record. For pre-2016 inspections only.</inlineHelpText>
        <label>Fee Land Inspection</label>
        <referenceTo>Fee_Land_Inspection__c</referenceTo>
        <relationshipName>Annual_Inspections</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Field_Documentation_Description__c</fullName>
        <inlineHelpText>Please provide a narrative description of the field verification and upload photos using the image icon in the header of this field.  This field is required if &quot;No&quot; is answered to any of the above questions.</inlineHelpText>
        <label>XDeprecatField Documentation Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Field_Documentation_Photos__c</fullName>
        <inlineHelpText>Please upload photos using the image icon in the header of this field.  This field is required if &quot;No&quot; is answered to any of the above questions.</inlineHelpText>
        <label>XDeprecate_Field Documentation Photos</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Field_Verification_Documentation_Status__c</fullName>
        <formula>IF(AND(ISPICKVAL(Clod_Size__c, &quot;Yes&quot;), 
     ISPICKVAL(Vegetation_Size__c, &quot;Yes&quot;), 
     ISPICKVAL(Water_Depth__c, &quot;Yes&quot;)), &quot;No Documentation Required&quot;, &quot;Required to Provide Documentation&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>XDeprecate_Field Verification Doc Stat</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_was_this_property_inspected__c</fullName>
        <inlineHelpText>Select the method(s) used to inspect the property.</inlineHelpText>
        <label>Method of Inspection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By foot</fullName>
                </value>
                <value>
                    <fullName>By vehicle/ATV</fullName>
                </value>
                <value>
                    <fullName>By boat</fullName>
                </value>
                <value>
                    <fullName>Fly-over</fullName>
                </value>
                <value>
                    <fullName>Aerial/Satellite imagery</fullName>
                </value>
                <value>
                    <fullName>Remote sensing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IRS_Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For easement 5/4/17</description>
        <inlineHelpText>Not editable on the monitoring report.  If you believe that it is incorrect, please contact your TNC manager or system administrator.</inlineHelpText>
        <label>IRS Reportable?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>If_no_steps_to_ensure_compliance__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Describe plans and communication undertaken to ensure that activities intended to address catastrophic impacts are consistent with the interest&apos;s restrictions.</inlineHelpText>
        <label>If no, steps to ensure compliance</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Imagery_and_or_Other_Sources__c</fullName>
        <inlineHelpText>Date and source of imagery or other reports and resources utilized.</inlineHelpText>
        <label>Imagery and/or Other Sources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Compliance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Added 3.16.2017. Any records prior to this date will not have this checkbox checked. Deprecated. Created formula instead called &apos;Ownership Issues?&apos;</description>
        <inlineHelpText>Check this box if this property management unit is in compliance.</inlineHelpText>
        <label>XDeprecated: In Compliance?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Infrastructure_Changes__c</fullName>
        <description>Created for Easements and Deed Restrictions 4/3/17</description>
        <inlineHelpText>Select any infrastructure changes observed.</inlineHelpText>
        <label>Infrastructure Changes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Airplane Landing Strip</fullName>
                </value>
                <value>
                    <fullName>Alternative Energy Installations</fullName>
                </value>
                <value>
                    <fullName>Barns</fullName>
                </value>
                <value>
                    <fullName>Buildings</fullName>
                </value>
                <value>
                    <fullName>Corrals</fullName>
                </value>
                <value>
                    <fullName>Dumps</fullName>
                </value>
                <value>
                    <fullName>Excavation</fullName>
                </value>
                <value>
                    <fullName>Fences</fullName>
                </value>
                <value>
                    <fullName>Hay Fields</fullName>
                </value>
                <value>
                    <fullName>Irrigation</fullName>
                </value>
                <value>
                    <fullName>Landfill</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Orchards</fullName>
                </value>
                <value>
                    <fullName>Ponds</fullName>
                </value>
                <value>
                    <fullName>Roads</fullName>
                </value>
                <value>
                    <fullName>Row Crops</fullName>
                </value>
                <value>
                    <fullName>Timber Harvesting</fullName>
                </value>
                <value>
                    <fullName>Trails</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Vineyards</fullName>
                </value>
                <value>
                    <fullName>Water Development</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Infrastucture_Change_Description__c</fullName>
        <inlineHelpText>Provide any further details of Infrastructure changes noted.</inlineHelpText>
        <label>Describe selected Infrastructure Changes</label>
        <length>3200</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Inspected_By__c</fullName>
        <inlineHelpText>Enter name of inspector if different from the author and their affiliation.</inlineHelpText>
        <label>Inspected By if different from Author</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inspection_Date__c</fullName>
        <inlineHelpText>Select the last date of the inspection or monitoring on this property that is covered by this report.  If there were prior inspection dates, please enter them in the visit section below.</inlineHelpText>
        <label>Inspection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspector__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the TNC staffer who is authoring the report.  If inspected by someone else please enter that name in the &quot;Inspected by&quot; field.</inlineHelpText>
        <label>Inspector</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Compliance_Monitoring1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Name_for_Collector__c</fullName>
        <formula>IF(Property_Interest__c &lt;&gt; &quot;&quot;, Property_Interest__r.Short_Name__c +
IF(ISBLANK(Subdivision__c),&quot;&quot;,&quot; &quot;+Subdivision__r.Name), IF(Property_Interest_Eco_monitoring__c &lt;&gt; &quot;&quot;, Property_Interest_Eco_monitoring__r.Short_Name__c +
IF(ISBLANK(Subdivision__c),&quot;&quot;,&quot; &quot;+Subdivision__r.Name),&quot;&quot;))</formula>
        <inlineHelpText>Name of interest plus the subdivision for the integration with Collector.</inlineHelpText>
        <label>Interest Name for Collector</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Type__c</fullName>
        <description>Created for easements 5/4/17</description>
        <inlineHelpText>This is read only on the monitoring record. If it is incorrect please contact the TNC manager or system administrator.</inlineHelpText>
        <label>Interest Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_Owner_Representative_Report__c</fullName>
        <description>For easements and deed restrictions</description>
        <inlineHelpText>Capture here information regarding owner activities in the last year and any questions or discussion of plans going forward. Include any additional information which may be provided or other observations shared, e.g. wildlife sightings, etc.Ask questions!</inlineHelpText>
        <label>Land Owner/Representative Report</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Last_Monitoring_Date__c</fullName>
        <description>Created for Easements 5/4/17. Will copy from easement record when new report is created.</description>
        <inlineHelpText>The last date in the prior monitoring year that this interest was monitored. Not editable in the monitoring report.</inlineHelpText>
        <label>Last Monitoring Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Link_ID_Number__c</fullName>
        <formula>IF( RecordType.DeveloperName = &quot;Ecological_Monitoring&quot;,  Property_Interest_Eco_monitoring__r.Legal_Link_Tract_ID_Number__c ,  Property_Interest__r.Legal_Link_Tract_ID_Number__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Legal Link ID number of the Property Interest (formula field - read only).</inlineHelpText>
        <label>Legal Link ID Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lock_Record__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When this checkbox is checked, the “Admin Override” approval process is launched. The approval process locks the record and unchecks the ‘Lock Record’ checkbox (so that it can easily be locked again), but does not change the status. This field is only visible to Administrators.</description>
        <inlineHelpText>Admin only field. Locks the record without changing the status. This box will not stay checked after the process runs, so if you need to re-lock the record again at a later date, you can.</inlineHelpText>
        <label>Lock Record</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MABR__c</fullName>
        <description>For easement monitoring 5/4/17</description>
        <externalId>true</externalId>
        <inlineHelpText>The CLS identifier number for the monitoring unit. This is not editable in the monitoring report. If you believe that it is incorrect, please contact your TNC manager or system administrator.</inlineHelpText>
        <label>CLS MABR ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management_Activities__c</fullName>
        <inlineHelpText>Select the management activities observed on your visit.</inlineHelpText>
        <label>Management Activities</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Agriculture/Grazing</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Habitat/Species preservation</fullName>
                </value>
                <value>
                    <fullName>Invasive species control</fullName>
                </value>
                <value>
                    <fullName>Recreation/public access</fullName>
                </value>
                <value>
                    <fullName>Restoration</fullName>
                </value>
                <value>
                    <fullName>Scientific research</fullName>
                </value>
                <value>
                    <fullName>Timber</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>See Fee Land Inspection Record</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Management_Problems__c</fullName>
        <description>For easement and deed restriction only</description>
        <inlineHelpText>Select any significant management problems that were observed on your visit.</inlineHelpText>
        <label>Management Problems</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Issues</fullName>
                </value>
                <value>
                    <fullName>Deferred Maintenance</fullName>
                </value>
                <value>
                    <fullName>Disease</fullName>
                </value>
                <value>
                    <fullName>Erosion</fullName>
                </value>
                <value>
                    <fullName>Exotic/Invasive Plants</fullName>
                </value>
                <value>
                    <fullName>Feral Animals</fullName>
                </value>
                <value>
                    <fullName>Litter</fullName>
                </value>
                <value>
                    <fullName>OHV&apos;s</fullName>
                </value>
                <value>
                    <fullName>Overuse</fullName>
                </value>
                <value>
                    <fullName>Pollution</fullName>
                </value>
                <value>
                    <fullName>Trespassing</fullName>
                </value>
                <value>
                    <fullName>Vandalism</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Boundary Dispute/encroachment</fullName>
                    <isActive>false</isActive>
                    <label>Boundary Dispute/encroachment</label>
                </value>
                <value>
                    <fullName>Dumping</fullName>
                    <isActive>false</isActive>
                    <label>Dumping</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Monitor_Final__c</fullName>
        <description>Final monitor assigned for this easement monitoring report.</description>
        <inlineHelpText>Final monitor assigned for this easement monitoring report.</inlineHelpText>
        <label>Final Monitor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor_Formula__c</fullName>
        <description>Set to Name of Monitor assigned in the Property Interest.</description>
        <formula>IF (  Contains(RecordType.DeveloperName,&quot;Fee&quot;),
Property_Management__r.Inspector_Assigned__r.Full_Name__c,IF (  Contains(RecordType.DeveloperName,&quot;Ecological&quot;),Property_Interest_Eco_monitoring__r.Monitor_Assigned__r.Full_Name__c,
Property_Interest__r.Monitor_Assigned__r.Full_Name__c ))</formula>
        <inlineHelpText>Uneditable - to change monitor assigned, you must change it on the property interest.</inlineHelpText>
        <label>Monitor Assigned</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monitor_Info_Final__c</fullName>
        <description>Created for easement and deed restriction so that monitor information on the monitoring report does not change if any of the monitor&apos;s info changes later. set on approval.</description>
        <inlineHelpText>This info comes from the monitor&apos;s Salesforce user account and is not editable on the monitoring report. Contact the Salesforce system administrator to make any changes to this information.</inlineHelpText>
        <label>Monitor Info Final</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>